--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -215,18 +215,18 @@ button {
     height: auto;
     padding-left: 15px;
     padding-right: 15px;
-    position: absolute;
+    position: relative;
     top: 0px;
     text-align: center;
 }
 
 .shop-half-bottom{
     width: 100%;
-    height: 50%;
+    height: auto;
     padding-left: 15px;
     padding-right: 15px;
-    position: absolute;
-    bottom: 0px;
+    position: relative;
+    bottom: -30px;
     text-align: center;
 }
 
@@ -238,7 +238,7 @@ button {
 
 #shop-pic3 {
     width: 100%;
-    height: 100%;
+    height: 184px;
     bottom: 0px;
 }
 
