--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
 
     <!-- CSS STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-
+    <link href="/assets/css/login-modal.css" rel="stylesheet">
     <!-- MAGNIFIC -->
     <link rel="stylesheet" href="assets/css/magnific.css">
 
@@ -27,12 +27,15 @@
     {{{body}}}
 
     <!-- jQuery -->
-
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    
     
     <!-- BOOTSTRAP JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> --}}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js">></script>
+
 
     <!-- SNIPCART -->
     <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="YTg3NjQ5Y2MtODM2NS00ODY1LTk2ODktMjQ3MTlkMDI5NTU2NjM2NjUzNzMxNzAxOTUzNzk5"></script>
@@ -41,7 +44,7 @@
     <script src="/assets/js/products.js"></script>
     <script src="/assets/js/category.js"></script>
     <script src="/assets/js/modal.js"></script>
-    
+    <script src="/assets/js/login.js"></script>
    
     <!-- PINTEREST SCRIPT -->
     <script async defer data-pin-hover="true" data-pin-tall="true" src="//assets.pinterest.com/js/pinit.js"></script>
